--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <h1>Your Subscription ($0.00/mo)</h1>
         <p>Billing cycle ends 12/15/16</p>
 
-
         <div class='tile'>
           <div class='small-tile-div'> $0.00</div>
           <div class='large-tile-div'>
@@ -61,7 +60,6 @@
                 <option value="self">Self Hosted</option>
               </select>
             </div>
-
 
             <div class='form-group select subscription-level'>
               <label>2. Select Level</label>
@@ -121,18 +119,15 @@
             <col class="essentials">
             <col class="pro">
             <tr><th>Level Features</th><th>LT</th><th>ESS</th><th>PRO</th></tr>
-            <tr><td>Days of Retention</td><td>1</td><td><p>3</p></td><td>9</td></tr>
+            <tr><td>Days of Retention</td><td>1</td><td>3</td><td>9</td></tr>
             <tr><td>Throughput, Response Times, and error Rates</td><td>✔</td><td>✔</td><td>✔</td></tr>
             <tr><td>Filterable error analytics and traces</td><td></td><td>✔</td><td>✔</td></tr>
             <tr><td>Deep JVM Monitoring</td><td></td><td></td><td>✔</td></tr>
 
-
           </table>
         </div>
       </div>
-
     </div>
-
   </div>
 
   <script type="text/javascript" src="index.js"></script>
